# silero

./: Cargo.toml  README.md
example/: input.json  run.sh  speech_orig_opus.webm  speech_orig_vorbis.weba
models/: .gitignore
models/en/: download.sh
src/: decoder.rs  lib.rs  main.rs
src/audio/: mod.rs  wav.rs  webm.rs
