[package]
name = "silero"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
av-codec = "0.3.0"
av-data = "0.4.1"
av-format = "0.7.0"
av-vorbis = { git = "https://github.com/rust-av/av-vorbis" }
clap = { version = "4.4.6", features = ["derive"] }
env_logger = "0.10.0"
hound = "3.5.1"
libopus = { version = "0.1.0", git = "https://github.com/rust-av/opus-rs", features = ["codec-trait"] }
log = "0.4.20"
matroska = { version = "0.1.0", git = "https://github.com/rust-av/matroska" }
ndarray = "0.15.6"
ort = { version = "2.0.0", features = ["load-dynamic"], git = "https://github.com/pykeio/ort", branch = "v2" }
rubato = "0.14.1"
serde_json = "1.0.107"
